# softcat-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: arxiv-monitor.yaml  hn-digest.yaml  site-content-bot.yaml
softcat/: __init__.py  cli.py  config.py
softcat/agents/: __init__.py  manager.py  runtime.py
softcat/core/: __init__.py  activator.py  configurator.py  designer.py  fabricator.py  orchestrator.py  scanner.py  tester.py  tracker.py
softcat/mcp/: __init__.py  registry.py
softcat/templates/: base_agent.py.j2  digest_agent.py.j2  monitor_agent.py.j2  transformer_agent.py.j2
tests/: test_activator.py  test_designer.py  test_groom.py  test_meow.py  test_orchestrator.py  test_runtime.py  test_scanner.py  test_tester.py  test_trigger.py
